--- a/index.html
+++ b/index.html
@@ -3,32 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Guess the Word Game</title>
+  <title>B2 English Word Game</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #a1c4fd, #c2e9fb);
-      padding: 20px;
-      color: #333;
+      background: linear-gradient(120deg, #fbc2eb, #a6c1ee);
+      padding: 30px;
       text-align: center;
+      color: #333;
     }
 
     .container {
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
-      background: #ffffffcc;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      background: #fff;
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      animation: fadeIn 0.6s ease;
     }
 
     h1 {
-      color: #0d47a1;
+      color: #2b3a67;
     }
 
     .question {
       margin: 20px 0;
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
     }
 
@@ -36,17 +37,17 @@
       display: block;
       width: 100%;
       margin: 10px 0;
-      padding: 12px;
-      font-size: 16px;
-      border-radius: 8px;
+      padding: 14px;
+      font-size: 18px;
+      border-radius: 10px;
       border: none;
       cursor: pointer;
-      background-color: #f5f5f5;
-      transition: 0.3s;
+      background-color: #f0f0f0;
+      transition: all 0.3s ease;
     }
 
     .options button:hover {
-      background-color: #bbdefb;
+      background-color: #d0e0ff;
     }
 
     .correct {
@@ -62,33 +63,43 @@
     .feedback {
       font-weight: bold;
       margin: 20px 0;
-      font-size: 18px;
+      font-size: 20px;
     }
 
     .score {
       margin-top: 30px;
-      font-size: 20px;
-      color: #1b5e20;
-    }
-
-    button:disabled {
-      cursor: default;
+      font-size: 22px;
+      color: #00695c;
     }
 
     .play-again {
-      background-color: #2196f3;
+      background-color: #5c6bc0;
       color: white;
-      margin-top: 20px;
+      padding: 12px 20px;
+      font-size: 16px;
+      margin-top: 25px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
     }
 
     .play-again:hover {
-      background-color: #1976d2;
+      background-color: #3f51b5;
+    }
+
+    button:disabled {
+      cursor: not-allowed;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Guess the Word</h1>
+    <h1>🧠 B2 English Vocabulary Game</h1>
     <div id="game">
       <div id="question" class="question"></div>
       <div id="options" class="options"></div>
@@ -100,54 +111,74 @@
   <script>
     const questions = [
       {
-        sentence: "He was very ___ about his chances of winning the award.",
-        options: ["pessimistic", "optimistic", "neutral", "furious"],
-        answer: "optimistic"
+        sentence: "The company aims to ___ its market share in Europe.",
+        options: ["expand", "reduce", "ignore", "escape"],
+        answer: "expand"
       },
       {
-        sentence: "The manager gave her a ___ for being late so often.",
-        options: ["bonus", "compliment", "warning", "promotion"],
-        answer: "warning"
+        sentence: "She delivered her speech with great ___.",
+        options: ["confidence", "confusion", "shyness", "anger"],
+        answer: "confidence"
       },
       {
-        sentence: "Although it was raining, they ___ with the picnic.",
-        options: ["gave up", "called off", "went ahead", "turned back"],
-        answer: "went ahead"
+        sentence: "The teacher tried to ___ the students’ interest in literature.",
+        options: ["spark", "avoid", "delay", "suppress"],
+        answer: "spark"
       },
       {
-        sentence: "She was deeply ___ by the news of her friend’s accident.",
-        options: ["moved", "excited", "bored", "annoyed"],
-        answer: "moved"
+        sentence: "They ___ the meeting due to scheduling conflicts.",
+        options: ["postponed", "completed", "celebrated", "ignored"],
+        answer: "postponed"
       },
       {
-        sentence: "We need to ___ the issue more before making a decision.",
-        options: ["ignore", "discuss", "delay", "abandon"],
-        answer: "discuss"
+        sentence: "He was ___ to hear the good news.",
+        options: ["delighted", "nervous", "offended", "confused"],
+        answer: "delighted"
       },
       {
-        sentence: "He was ___ from school for cheating on the exam.",
-        options: ["suspended", "awarded", "invited", "promoted"],
-        answer: "suspended"
+        sentence: "You must ___ your password regularly to maintain security.",
+        options: ["change", "guess", "ignore", "hide"],
+        answer: "change"
       },
       {
-        sentence: "The scientist made a groundbreaking ___ in cancer research.",
-        options: ["discovery", "disaster", "discussion", "departure"],
-        answer: "discovery"
+        sentence: "They’re trying to ___ a solution to the problem.",
+        options: ["come up with", "run away", "look down", "drop in"],
+        answer: "come up with"
       },
       {
-        sentence: "We had to ___ the meeting due to technical issues.",
-        options: ["postpone", "attend", "celebrate", "ignore"],
-        answer: "postpone"
+        sentence: "He always speaks in a very ___ manner.",
+        options: ["polite", "noisy", "awkward", "clumsy"],
+        answer: "polite"
       },
       {
-        sentence: "Despite his ___ beginnings, he became a successful entrepreneur.",
-        options: ["humble", "famous", "arrogant", "easy"],
-        answer: "humble"
+        sentence: "The new system will ___ the process of ordering products.",
+        options: ["streamline", "complicate", "abandon", "cancel"],
+        answer: "streamline"
       },
       {
-        sentence: "The book was so ___ that I couldn’t put it down.",
-        options: ["boring", "confusing", "gripping", "average"],
-        answer: "gripping"
+        sentence: "She was ___ by the complexity of the task.",
+        options: ["overwhelmed", "bored", "pleased", "relaxed"],
+        answer: "overwhelmed"
+      },
+      {
+        sentence: "Please ___ your seatbelts before takeoff.",
+        options: ["fasten", "untie", "remove", "cancel"],
+        answer: "fasten"
+      },
+      {
+        sentence: "The politician was accused of ___ the truth.",
+        options: ["manipulating", "ignoring", "accepting", "defending"],
+        answer: "manipulating"
+      },
+      {
+        sentence: "This movie is not ___ for children under 12.",
+        options: ["suitable", "dangerous", "curious", "free"],
+        answer: "suitable"
+      },
+      {
+        sentence: "He decided to ___ a career in medicine.",
+        options: ["pursue", "delay", "abandon", "avoid"],
+        answer: "pursue"
       }
     ];
 
@@ -179,7 +210,7 @@
         document.getElementById('feedback').textContent = "✅ Correct!";
       } else {
         button.classList.add('wrong');
-        document.getElementById('feedback').textContent = `❌ Wrong. The correct answer was "${correct}".`;
+        document.getElementById('feedback').textContent = `❌ Wrong. Correct answer: "${correct}".`;
       }
 
       setTimeout(() => {
@@ -194,9 +225,9 @@
 
     function showScore() {
       document.getElementById('game').innerHTML = `
-        <h2>🎉 Game Over!</h2>
-        <p>You scored ${score} out of ${questions.length}.</p>
-        <button class="play-again" onclick="location.reload()">Play Again</button>
+        <h2>🎉 Game Finished!</h2>
+        <p>You scored <strong>${score}</strong> out of <strong>${questions.length}</strong>.</p>
+        <button class="play-again" onclick="location.reload()">🔁 Play Again</button>
       `;
     }
 
