--- a/index.html
+++ b/index.html
@@ -202,29 +202,31 @@
       document.getElementById('feedback').textContent = '';
     }
 
-    function checkAnswer(button, selected) {
-      const correct = questions[currentQuestion].answer;
-      const buttons = document.querySelectorAll('.options button');
-      buttons.forEach(btn => btn.disabled = true);
+   function checkAnswer(button, selected) {
+  const correct = questions[currentQuestion].answer;
+  const buttons = document.querySelectorAll('.options button');
+  buttons.forEach(btn => btn.disabled = true);
 
-      if (selected === correct) {
-        score++;
-        button.classList.add('correct');
-        document.getElementById('feedback').textContent = "✅ Correct!";
-      } else {
-        button.classList.add('wrong');
-        document.getElementById('feedback').textContent = `❌ Wrong. Correct answer: "${correct}".`;
-      }
+  if (selected === correct) {
+    score++;
+    correctSound.play(); // 🔊 Play correct sound
+    button.classList.add('correct');
+    document.getElementById('feedback').textContent = "✅ Correct!";
+  } else {
+    wrongSound.play(); // 🔊 Play wrong sound
+    button.classList.add('wrong');
+    document.getElementById('feedback').textContent = `❌ Wrong. Correct answer: "${correct}".`;
+  }
 
-      setTimeout(() => {
-        currentQuestion++;
-        if (currentQuestion < questions.length) {
-          loadQuestion();
-        } else {
-          showScore();
-        }
-      }, 1500);
+  setTimeout(() => {
+    currentQuestion++;
+    if (currentQuestion < questions.length) {
+      loadQuestion();
+    } else {
+      showScore();
     }
+  }, 1500);
+}
 
     function showScore() {
       document.getElementById('game').innerHTML = `
